initial commit for b2c page

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: B2C Solution Architect Program
+logo: /assets/img/Solution_Architect_Program_B2C_Logo_Vert_RGB.png
+description: Home for Assets Related to the B2C Solution Architect Program. 
+show_downloads: false
+google_analytics: UA-191200364-1
 theme: jekyll-theme-minimal
