--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
-# title: B2C Solution Architect Program
-# logo: /assets/img/Solution_Architect_Program_B2C_Logo_Vert_RGB.png
-# description: Home for Assets Related to the B2C Solution Architect Program. 
-# show_downloads: false
-# google_analytics: UA-190756506-2
-# theme: jekyll-theme-minimal
-
-
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
@@ -102,9 +94,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : google # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : UA-190756506-2
+    tracking_id          : "UA-190756506-2"
     anonymize_ip         : # true, false (default)
 
 
