fixed header typo

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "success" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "B2C Solution Architect Program"
 title_separator          : "-"
-subtitle                 : "Salesforce Solution Architect program for B2B and B2C architects" 
+subtitle                 : "Salesforce Solution Architect program for B2C architects" 
 name                     : "Architect Success"
 description              : "Home for Assets Related to the B2C Solution Architect Program."
 url                      : "https://b2csolutionarchitectprogram.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
